--- a/Laboratorium5/Laboratorium5.vcxproj
+++ b/Laboratorium5/Laboratorium5.vcxproj
@@ -138,6 +138,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="C:\Users\Chronous\Downloads\durak.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
